workimg but not typed super well